welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var T:Array[Color];var x = getHauteurMonde();
            ^Array1:5: error: not found: value getHauteurMonde
	var T:Array[Color];var x = getHauteurMonde();
                                   ^